--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.verybadalloc.books">
+    package="com.verybadalloc.designlib">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-sdk tools:overrideLibrary="com.hannesdorfmann.mosby, com.hannesdorfmann.mosby.mvp, com.hannesdorfmann.mosby.dagger1, com.hannesdorfmann.mosby.dagger1.mvp, com.hannesdorfmann.mosby.mvp.viewstate"/>
 
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.verybadalloc.books.views.BooksListActivity"
+            android:name="com.verybadalloc.designlib.views.BooksListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +21,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.verybadalloc.books.views.BookDetailsActivity"
-            android:parentActivityName="com.verybadalloc.books.views.BooksListActivity" >
+            android:name="com.verybadalloc.designlib.views.BookDetailsActivity"
+            android:parentActivityName="com.verybadalloc.designlib.views.BooksListActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.verybadalloc.books.views.BooksListActivity" />
+                android:value="com.verybadalloc.designlib.views.BooksListActivity" />
         </activity>
 
     </application>
